* Moneris: Update crypt_type for 3DS [almalee24] #5162
* CheckoutV2: Update 3DS message & error code [almalee24] #5177
* DecicirPlus: Update error_message to add safety navigator [almalee24] #5187
* Elavon: Add updated stored credential version [almalee24] #5170
* Adyen: Add header fields to response body [yunnydang] #5184

== Version 1.136.0 (June 3, 2024)
* Shift4V2: Add new gateway based on SecurionPay adapter [heavyblade] #4860
* TNS: Use the specified order_id in request if available [yunnydang] #4880
* Cybersource: Support recurring apple pay [aenand] #4874
* Verve BIN ranges and add card type to Rapyd gateway [jherreraa] #4875
* Rapyd: Add network_reference_id, initiation_type, and update stored credential method [yunnydang] #4877
* Adyen: Add the store field [yunnydang] #4878
* Stripe Payment Intents: Expand balance txns for regular transactions [yunnydang] #4882
* CyberSource (SOAP): Added support for 3DS exemption request fields [BritneyS] #4881
* StripePI: Adding network tokenization fields to Stripe PaymentIntents [BritneyS] #4867
* Shift4: Fixing currency bug [Heavyblade] #4887
* Rapyd: fixing issue with json encoding and signatures [Heavyblade] #4892
* SumUp: Setup, Scrub and Purchase build [sinourain] #4890
* XpayGateway: Initial setup [javierpedrozaing] #4889
* Rapyd: Add validation to not send cvv and network_reference_id [javierpedrozaing] #4895
* Ebanx: Add Ecuador and Bolivia as supported countries [almalee24] #4893
* Decidir: Add support for network tokens [almalee24] #4870
* Element: Fix credit card name bug [almalee24] #4898
* Adyen: Add payout endpoint [almalee24] #4885
* Adding Oauth Response for access tokens [almalee24] #4851
* CheckoutV2: Update stored credentials [almalee24] #4901
* Revert "Adding Oauth Response for access tokens" [almalee24] #4906
* Braintree: Create credit card nonce [gasb150] #4897
* Adyen: Fix shopperEmail bug [almalee24] #4904
* Add Cabal card bin ranges [yunnydang] #4908